@@ -6,7 +6,7 @@ include_once("../../class/formulacion.class.php");
 
 class MODULO extends formulacion{
   public static function onInit(){
-    $access=SIGA::access("formulacion");//null,r,rw,a    
+    $access=SIGA::access("formulacion");//null,r,rw,a
     switch($_REQUEST["action"]){
       case "onGet":
         header('Content-Type: text/plain; charset=utf-8');
@@ -14,8 +14,8 @@ class MODULO extends formulacion{
                                       SIGA::paramUpper("tipo"),
                                       SIGA::param("id_accion_subespecifica")));
         break;
-      
-      
+
+
       case "onSave":
       case "save":
         header('Content-Type: text/plain; charset=utf-8');
@@ -26,6 +26,13 @@ class MODULO extends formulacion{
                                         SIGA::param("data",false),
                                         SIGA::param("asignar")));
         break;
+      case "onDelete_Asignacion":
+        header('Content-Type: text/plain; charset=utf-8');
+        print json_encode(self::onDelete_Asignacion( $access,
+                                        SIGA::param("anio"),
+                                        SIGA::paramUpper("tipo"),
+                                        SIGA::param("id_accion_subespecifica")));
+        break;
       case "onCss":
       case "css":
         header('Content-Type: text/css; charset=utf-8');
@@ -33,18 +40,18 @@ class MODULO extends formulacion{
         break;
       case "onJavascript":
       case "js":
-      case "javascript":  
+      case "javascript":
         header('Content-Type: text/javascript; charset=utf-8');
         print self::onJavascript($access);
         break;
-    }    
-  }  
-  
+    }
+  }
+
   public static function onCss($access){
     if(!$access) return;
     return SIGA::css("main.css");
   }
-  
+
   public static function onJavascript($access){
     if(!$access) return;
     return SIGA::js("main.js");
